# bazel-verilog-test

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  counter.v
.github/workflows/: build.yml
