load("@rules_hdl//synthesis:build_defs.bzl", "synthesize_rtl")
load("@rules_hdl//place_and_route:build_defs.bzl", "place_and_route")
load("@rules_hdl//gds_write:build_defs.bzl", "gds_write")
load("@rules_hdl//verilog:providers.bzl", "verilog_library")

gds_write(
	name = "counter_asic",
	implemented_rtl = ":counter_place_and_route",
	klayout_lyt = "klayout.lyt",
	klayout_lef = "klayout_tech.lef",
	fill_config = "fill.json",
	additional_lef = ["sky130_fd_sc_hd_merged.lef"],
	additional_gds = ["sky130_fd_sc_hd.gds"],
)

place_and_route(
    name = "counter_place_and_route",
    clock_period = "1",
    core_padding_microns = 1,
    die_height_microns = 100,
    die_width_microns = 100,
    placement_density = "0.6",
    synthesized_rtl = ":verilog_counter_synth",
)

synthesize_rtl(
    name = "verilog_counter_synth",
    top_module = "counter",
    deps = [
        ":verilog_counter",
    ],
)

verilog_library(
    name = "verilog_counter",
    srcs = [
        "counter.v",
    ],
)
